--- a/Online Fashion Store - mini Project/index.php.html
+++ b/Online Fashion Store - mini Project/index.php.html
@@ -25,8 +25,8 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <style>
     	body{
-    		background-color: black;
-            background-image: C:\Users\Ace Write\Desktop\Imran -Web\Online Fashion Store - mini Project\images('bird.jpg');
+    		/*background-color: black;*/
+            background-image: url(bird.jpg);
     	}
     	.wrapper{
     		width: 50px
@@ -100,7 +100,7 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
 	<li><a href="#About">About</a></li>
 </ul>
 <img src="pngtree-flying-birds-vector-logo-png-image_3564360" height="400" width="600">
-
+<p style="background-image: url('ivoc_olive_green_slim_fit_shirt_with_flap_pockets');">
 
 <!-- footer -->
 
