--- a/dummy.html
+++ b/dummy.html
@@ -4,13 +4,14 @@
 	<title>dummy1</title>
 	<style>
 		body{
-			background-image: https://pngtree.com/freepng/flying-birds-vector-logo_3564360.html
+			background-image: url(bird.jpg);
 			margin-right: 100px;
 		}
 	</style>
 </head>
 <body>
 	<h1>Hellow World</h1>
+	<p style="background-image: url('bird.jpg');">
 
 </body>
 </html>
