--- a/Online Fashion Store - mini Project/index.html
+++ b/Online Fashion Store - mini Project/index.html
@@ -6,19 +6,21 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
 <!DOCTYPE html>
 <html lang ="en">
 <head>
-    <title>index.html</title>
+    <title>index</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+        <!-- <link rel="stylesheet" href="../css/stylesheet.css"> -->
+        <link rel="stylesheet" href="mystyle.css">
 
 <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   
     <link rel="stylesheet" href="<?php echo $server; ?>css/style.css" >
- 
+  -->
 <!-- Latest compiled and minified JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
@@ -82,14 +84,14 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
         }
 
         </style>
-    </style>
-
+  
+ -->
 </head>
 <body>
     <!-- header -->
     <div>
 
-    <h4 class="wrapper">Welcome to the store</h4>
+    <h4 class="wrapper">Zyrn's Online Fasion-Store</h4>
     <input type="button" name="button" value="Home" action="index.html" style="position:absolute; top:0; left:0; background-color: black; color: orange;">
 
     <!-- <input  type="button" name="About" value="About" action="" style="position: absolute; top: 0;left: : 200"> -->
@@ -97,7 +99,7 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
    
     </div>
 
-    <!-- <marquee class="marque"><h5> Promocode: Firstpay100 </h5></marquee> -->
+    <!-- <marquee class="marque"><h5> Promocode: Firstpay100 </h5></marquee> --> 
 
 <!-- Body -->
 <ul>
