--- a/Online Fashion Store - mini Project/index.html
+++ b/Online Fashion Store - mini Project/index.html
@@ -10,17 +10,17 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
         <!-- <link rel="stylesheet" href="../css/stylesheet.css"> -->
-        <link rel="stylesheet" href="mystyle.css">
+        <link href="mystyle.css" rel="stylesheet">
 
 <!-- Latest compiled and minified CSS -->
-   <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   
     <link rel="stylesheet" href="<?php echo $server; ?>css/style.css" >
-  -->
+ 
 <!-- Latest compiled and minified JavaScript -->
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
@@ -85,7 +85,7 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
 
         </style>
   
- -->
+
 </head>
 <body>
     <!-- header -->
@@ -131,6 +131,20 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
     <a class="text-white" href="TermsofService"><footer style="text-align: center; color: white;" >Terms of Services</footer></a>
     <a class="text-white" href="PrivacyPolicy"><footer style="text-align: center; color: white;" >Privacy Policy</footer></a>
 </span>
+<table align="center">
+  <tr>
+    <th >Terms of Services</th>
+    <th>Privacy Policy</th>
+  </tr>
+  <tr>
+    <td>Peter</td>
+    <td>Griffin</td>
+  </tr>
+  <tr>
+    <td>Lois</td>
+    <td>Griffin</td>
+  </tr>
+</table>
 
 
 </body>
