--- a/Online Fashion Store - mini Project/index.html
+++ b/Online Fashion Store - mini Project/index.html
@@ -92,10 +92,10 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
     <div>
 
     <h4 class="wrapper">Zyrn's Online Fasion-Store</h4>
-    <input type="button" name="button" value="Home" action="index.html" style="position:absolute; top:0; left:0; background-color: black; color: orange;">
+    <a href="#"><input type="button" name="button" value="Home" action="index.html" style="position:absolute; top:0; left:0; background-color: black; color: orange;"></a>
 
     <!-- <input  type="button" name="About" value="About" action="" style="position: absolute; top: 0;left: : 200"> -->
-    <input  type="button" name="button" value="SignIn" action="signin.html" style="position:absolute; top:0; right:0; background-color: black; color: orange;">
+    <a href="signin.html" target="blank"><input  type="button" name="button" value="SignIn" action="signin.html" style="position:absolute; top:0; right:0; background-color: black; color: orange;"></a>
    
     </div>
 
@@ -128,23 +128,9 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
         </footer>
     </div>
 <span>
-    <a class="text-white" href="TermsofService"><footer style="text-align: center; color: white;" >Terms of Services</footer></a>
-    <a class="text-white" href="PrivacyPolicy"><footer style="text-align: center; color: white;" >Privacy Policy</footer></a>
+    <a class="text-white" href="TermsofService.html" target="blank"><footer style="text-align: center; color: white;" >Terms of Services</footer></a>
+    <a class="text-white" href="PrivacyPolicy.html" target="blank"><footer style="text-align: center; color: white;" >Privacy Policy</footer></a>
 </span>
-<table align="center">
-  <tr>
-    <th >Terms of Services</th>
-    <th>Privacy Policy</th>
-  </tr>
-  <tr>
-    <td>Peter</td>
-    <td>Griffin</td>
-  </tr>
-  <tr>
-    <td>Lois</td>
-    <td>Griffin</td>
-  </tr>
-</table>
 
 
 </body>
