--- a/Online Fashion Store - mini Project/index.html
+++ b/Online Fashion Store - mini Project/index.html
@@ -105,9 +105,9 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
 <ul>
 
     <li><a class="active" href="#Dashboard">Dashboard</a></li>
-    <li><a href="#Men">Men</a></li>
-    <li><a href="#Women">Women</a></li>
-    <li><a href="#Kids">Kids</a></li>
+    <li><a href="men.html">Men</a></li>
+    <li><a href="women.html">Women</a></li>
+    <li><a href="kids.html">Kids</a></li>
     <li><a href="#Electronics">Electronics</a></li>
     <li><a href="#Gadgets">Gadgets</a></li>
     <li><a href="#Kitchen">Kitchen</a></li>
