--- a/Online Fashion Store - mini Project/index.html
+++ b/Online Fashion Store - mini Project/index.html
@@ -102,7 +102,8 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
     <!-- <marquee class="marque"><h5> Promocode: Firstpay100 </h5></marquee> --> 
 
 <!-- Body -->
-<ul>
+<span>
+    <ul>
 
     <li><a class="active" href="#Dashboard">Dashboard</a></li>
     <li><a href="men.html">Men</a></li>
@@ -116,7 +117,16 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
     <li><a href="#About">About</a></li>
     <li><a href="#Blogs">Blogs</a></li>
 
-</ul>
+    </ul>
+</span>
+
+<span style="align-content: right">
+<img src="images/mens2.jpg" height="200" width="400">
+<img src="images/women2.jpg" height="200" width="400">
+<img src="images/kids2.jpg" height="200" width="400">
+<img src="images/toys2.jpg" height="200" width="400">
+</span>
+
 <!-- <img src="flower.jpg" height="600" width="1200"> -->
 <!-- <p style="background-image: url('ivoc_olive_green_slim_fit_shirt_with_flap_pockets');">
  -->
@@ -128,8 +138,8 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
         </footer>
     </div>
 <span>
-    <a class="text-white" href="TermsofService.html" target="blank"><footer style="text-align: center; color: white;" >Terms of Services</footer></a>
-    <a class="text-white" href="PrivacyPolicy.html" target="blank"><footer style="text-align: center; color: white;" >Privacy Policy</footer></a>
+    <a class="text-white" href="TermsofService.html" target="blank"><footer style="text-align: center; color: white;" >Terms of Services</footer></a></span>
+  <span>  <a class="text-white" href="PrivacyPolicy.html" target="blank"><footer style="text-align: center; color: white;" >Privacy Policy</footer></a>
 </span>
 
 
