--- a/Online Fasion Store/men.html
+++ b/Online Fasion Store/men.html
@@ -49,9 +49,10 @@ body{
 	</style>
 </head>
 <body>
-	
+	 <a href="cart.php">
 <div class="row">
   <div class="column">
+<a href="cart.php">
     <img src="images/img1.jpg">
     <img src="images/img2.jpg">
     <img src="images/img3.jpg">
@@ -86,6 +87,7 @@ body{
     <img src="images/img8.jpg">
     <img src="images/img6.jpg">
 </div>
+
 
 </body>
 </html>
