--- a/Online Fasion Store/index.html
+++ b/Online Fasion Store/index.html
@@ -120,12 +120,12 @@ $server = 'http://' . $_SERVER['SERVER_NAME'] . '/ecom/';
     </ul>
 </span>
 
-<span style="align-content: right">
+<!-- <span style="align-content: right">
 <img src="images/mens2.jpg" height="200" width="400">
 <img src="images/women2.jpg" height="200" width="400">
 <img src="images/kids2.jpg" height="200" width="400">
 <img src="images/toys2.jpg" height="200" width="400">
-</span>
+</span> -->
 
 <!-- <img src="flower.jpg" height="600" width="1200"> -->
 <!-- <p style="background-image: url('ivoc_olive_green_slim_fit_shirt_with_flap_pockets');">
